# bazel-cs-gen-transitions

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
problem/cpp/: BUILD.bazel
problem/cs/: BUILD.bazel  bfile.cs
problem/gen_src/cs/: afile.cs
repo/: paket.bzl  paket.dependencies  paket.deps.bzl  paket.deps_extension.bzl
rules/: copy_from_zip.bzl
workaround1/: README.md
workaround1/cpp/: BUILD.bazel  bfile.cpp
workaround1/cs/: BUILD.bazel  cfg_csharp_binary.bzl
workaround1/gen_src/: BUILD.bazel
workaround1/gen_src/cpp/: afile.cpp
